--- a/src/version.html
+++ b/src/version.html
@@ -5,6 +5,7 @@
     <title>Version</title>
   </head>
   <body>
+    <div class = "messages-container"></div>
     <h1>Version:</h1>
     <!-- All of the Node.js APIs are available in this renderer process. -->
     <p id="version"></p>
