--- a/src/version.html
+++ b/src/version.html
@@ -5,11 +5,13 @@
     <title>Version</title>
   </head>
   <body>
+    <div class = "messages-container"></div>
     <h1>Version:</h1>
     <!-- All of the Node.js APIs are available in this renderer process. -->
     <p id="version"></p>
   </body>
   <script>
+    require('../renderer.js')
     var pjson = require('../package.json');
     document.getElementById("version").innerHTML = "verion: " + pjson.version;
   </script>
